#112 Fix horizontal scrolling on history

--- a/services/nginx/ui/src/components/History/HistoryList.module.scss
+++ b/services/nginx/ui/src/components/History/HistoryList.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/vars.scss";
 
 .list {
-    margin-left: calc(1rem + 8px);
+    width: 100vw;
 
     table {
         th,
